# British-Library

./: .gitignore  .hindent.yaml  British-Library.cabal  stack.yaml
app/: Main.hs
src/: Api.hs  App.hs  JsonString.hs  Jsonb.hs  Lib.hs  Main.hs  Models.hs  PostgresJson.hs  Type.hs  Util.hs
src/Api/: Manga.hs  Static.hs  Upload.hs  User.hs
src/PostgresJson/: Query.hs  Servant.hs  Type.hs
