name:                British-Library
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/British-Library#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable brlib
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Api
                     , App
                     , Models
  build-depends:       base
                     , aeson
                     , attoparsec
                     , bytestring
                     , monad-logger
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite British-Library-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , British-Library
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/British-Library
